[package]
name = "merkle_trees"
version = "0.1.0"
authors = ["Lovesh Harchandani <lovesh.bond@gmail.com>"]
edition = "2018"
description = "Various merkle trees"
license = "Apache-2.0"
repository = "https://github.com/lovesh/merkle_trees"

[dependencies]
num-bigint = {version = "0.2.3", features=["rand"]}
num-traits = "0.2.10"
rlp = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
failure = "0.1"
generic-array = "0.13.2"
arrayvec = "0.5.1"
sha2 = "0.8"
sha3 = "0.8"

[dev-dependencies]
rand = "0.6"
blake2 = "0.8"
mimc-rs = "0.0.2"
unqlite = "1.4.3"
sled = "0.29"
rusqlite = "0.21.0"